--- a/users/templates/users/analysis.html
+++ b/users/templates/users/analysis.html
@@ -116,7 +116,7 @@
 
         .navbar-links li {
             position: relative;
-            margin-right: 20px;
+            margin-right: 10px;
         }
 
         .navbar-links a {
@@ -254,6 +254,7 @@
             <li><a href="#">{% trans 'LLM Analysis' %}</a></li>
             <li><a href="{% url 'wraps' %}">{% trans 'Past Wraps' %}</a></li>
             <li><a href="{% url 'public_wraps' %}">{% trans 'Public Wraps' %}</a></li>
+            <li><a href="{% url 'duo_wrapped' %}">Duo-Wrapped</a></li>
             <li><a href="{% url 'profile' %}">{% trans 'Profile' %}</a></li>
             <li><a href="{% url 'contact' %}">{% trans 'Contact' %}</a></li>
             <li><a href="{% url 'logout' %}">{% trans 'Logout' %}</a></li>
