--- a/users/templates/users/contact.html
+++ b/users/templates/users/contact.html
@@ -358,6 +358,7 @@
             <p><strong>{% trans 'Email:' %}</strong> support@spotifywrapper.com</p>
             <p><strong>{% trans 'Response Time:' %}</strong> {% trans 'We typically respond within 24-48 hours' %}</p>
             <p><strong>{% trans 'Hours:' %}</strong> {% trans 'Monday - Friday:' %}, 9:00 AM - 5:00 PM EST</p>
+            <a href="https://sites.google.com/view/team7spotifywrapper/home" class="btn">{% trans 'Portfolio' %}</a> <!-- Added About Us button -->
         </div>
     </div>
     <button class="theme-toggle" onclick="toggleRegularTheme()">
